# texgen

./: CMakeLists.txt  Dockerfile  LICENSE  README  README.md  geneticalgorithm.cpp  geneticalgorithm.h  image.cpp  image.h  main.cpp  random.cpp  random.h  sdlgl.cpp  sdlgl.h  simplefitness.cpp  simplefitness.h  simplegene.cpp  simplegene.h  simplegenemutate.cpp  simplegenemutate.h  util.cpp  util.h
